# test

./: .gitignore  .pre-commit-config.yaml  config.yaml  pyproject.toml
data/completions/jess-summarization/call_center_transcript_0/: call_center_transcript_0_amazon.titan-text-express-v1_rep1.txt  call_center_transcript_0_amazon.titan-text-express-v1_rep2.txt
data/completions/jess-summarization/call_center_transcript_1/: call_center_transcript_1_amazon.titan-text-express-v1_rep1.txt  call_center_transcript_1_amazon.titan-text-express-v1_rep2.txt
data/metrics/jess-summarization/call_center_transcript_0/: call_center_transcript_0_amazon.titan-text-express-v1_rep1.json  call_center_transcript_0_amazon.titan-text-express-v1_rep2.json
data/metrics/jess-summarization/call_center_transcript_1/: call_center_transcript_1_amazon.titan-text-express-v1_rep1.json  call_center_transcript_1_amazon.titan-text-express-v1_rep2.json
data/prompts/: titan_template.txt
data/raw/0/: call_center_transcript_0_golden_summary.txt  call_center_transcript_0_transcript.txt
data/raw/1/: call_center_transcript_1_golden_summary.txt  call_center_transcript_1_transcript.txt
eval/summarization/: summarize.py
eval/utils/: __init__.py  bedrock_utils.py  tokenizer_utils.py  utils.py
